@startuml
'https://plantuml.com/class-diagram

class TimeSeriesDataPoint {
    timestamp : tm
    value : float
}

class DisplayData {
    dailyPredictions : std::vector<DailyPrediction>
    highestTideLevel : TimeSeriesDataPoint
    lowestTideLevel : TimeSeriesDataPoint
}

class DailyPrediction {
    date : tm
    lunarData : LunarData
    tideData : TideData
    weatherData : WeatherData
}

class LunarData {
    julianDay : int
    sunPosition : float
    moonPosition : float
    visible : float
    segment : int
}

class TideData {
    highestTideLevel : TimeSeriesDataPoint
    lowestTideLevel : TimeSeriesDataPoint
    tideLevels : std::vector<TimeSeriesDatum>
}

class WeatherData {
    highTemperature : TimeSeriesDataPoint
    lowTemperature : TimeSeriesDataPoint
    temperatures : std::vector<TimeSeriesDatum>
    apparentTemperatures : std::vector<TimeSeriesDatum>
}

DisplayData "1" o-- "many" DailyPrediction
DailyPrediction *-- LunarData
DailyPrediction *-- TideData
DailyPrediction *-- WeatherData
TideData "1" o-- "many" TimeSeriesDataPoint
WeatherData "1" o-- "many" TimeSeriesDataPoint


@enduml
